<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/xanhduong"
    android:orientation="vertical"
    android:padding="7dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/imgQuaLai_QLQ"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:contentDescription="@string/quaylai"
            android:src="@drawable/ic_quaylai" />

        <TextView
            android:id="@+id/tvTieuDe_QLQ"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toLeftOf="@+id/imgXong_QLQ"
            android:layout_toRightOf="@+id/imgQuaLai_QLQ"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textColor="@color/trang"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/imgXong_QLQ"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="@+id/tvTieuDe_QLQ"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:contentDescription="@string/hoantat"
            android:src="@drawable/ic_xong" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/trang"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <ImageView
                android:id="@+id/imgAnh_QLQ"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/quy"
                android:src="@drawable/ic_quy" />

            <EditText
                android:id="@+id/etTenQuy_QLQ"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:hint="@string/tenquy"
                android:textSize="20sp"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/sotienco"
                android:src="@drawable/ic_dollar" />

            <EditText
                android:id="@+id/etSoTien_QLQ"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:hint="@string/sotien"
                android:textSize="20sp"
                android:padding="5dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>