<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xanhduong"
    android:orientation="vertical"
    android:padding="7dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/imgbtnQuayLai_QLKHNS"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:contentDescription="@string/quaylai"
            android:src="@drawable/ic_quaylai" />

        <TextView
            android:id="@+id/tvTieuDe_QLKHNS"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toLeftOf="@+id/imgbtnXong_QLKHNS"
            android:layout_toRightOf="@+id/imgbtnQuayLai_QLKHNS"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textColor="@color/trang"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/imgbtnXong_QLKHNS"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="@+id/tvTieuDe_QLKHNS"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:contentDescription="@string/hoantat"
            android:src="@drawable/ic_xong" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/trang"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:padding="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imgviewAnhNhom_QLKHNS"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/anhchonnhom"
                android:src="@drawable/ic_khonganh" />

            <EditText
                android:id="@+id/etTenNhom_QLKHNS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/chonnhom"
                android:inputType="textEmailAddress"
                android:textSize="30sp"
                android:textStyle="normal" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imgviewAnhTien_QLKHNS"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/anhsotien"
                android:src="@drawable/ic_khonganh" />

            <EditText
                android:id="@+id/etSoTien_QLKHNS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/sotien_GD"
                android:inputType="textEmailAddress"
                android:textSize="30sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/anhghichu"
                android:src="@drawable/ic_ngaybatdau" />

            <EditText
                android:id="@+id/etNgayThucHien_QLKHNS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ngaybatdau"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:textStyle="normal" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/anhghichu"
                android:src="@drawable/ic_ngayketthuc" />

            <EditText
                android:id="@+id/etNgayKetThuc_QLKHNS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ngayketthuc"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/anhghichu"
                android:src="@drawable/ic_ghichu" />

            <EditText
                android:id="@+id/etGhiChu_QLKHNS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ghichu"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:textStyle="normal" />
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>